src/tests/text_document/snapshots/texlab__tests__text_document__publish_diagnostics__build_log_filter_none.snap
---
source: src/tests/text_document/publish_diagnostics.rs
expression: result.all_diagnostics
---
{
  "[tmp]/main.tex": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 0
        },
        "end": {
          "line": 6,
          "character": 4
        }
      },
      "severity": 1,
      "source": "latex-build",
      "message": "Undefined control sequence."
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 0
        },
        "end": {
          "line": 7,
          "character": 0
        }
      },
      "severity": 2,
      "source": "latex-build",
      "message": "Overfull \\hbox (80.00125pt too wide) in paragraph at lines 8--9"
    }
  ]
}
